[tool.poetry]
name = "fkdm"
version = "0.1.0"
description = ""
authors = ["Fidele K <itfidele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyqt5 = "^5.15.10"
qtawesome = "^1.3.0"
notify-py = "^0.3.42"
pycurl = "^7.45.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
